Adição da tabela categorias

--- a/SistemaWeb/src/main/resources/templates/categoria.html
+++ b/SistemaWeb/src/main/resources/templates/categoria.html
@@ -266,16 +266,11 @@
                                     </tfoot>
 
                                     <tbody>
-                                    <!-- Model   $ Controller - nome que vai está se referindo a isso daqui -->
-                                    <!--
-                                    <tr th:each="produtos : ${ProdutosController}">
+
+                                    <tr th:each="categorias : ${categorias}">
                                         <td th:text="${categorias.name}"></td>
                                         <td th:text="${categorias.id}"></td>
-                                        <td th:text="${produtos.preco}"></td>
-                                        <td th:text="${produtos.categoria}"></td>
-                                        <td th:text="${produtos.fornecedor}"></td>
                                     </tr>
-                                    -->
                                     </tbody>
                                 </table>
                             </div>
