adequação do estilo e adição de mensagem de sucesso e erro na table

--- a/SistemaWeb/src/main/resources/templates/categoria.html
+++ b/SistemaWeb/src/main/resources/templates/categoria.html
@@ -102,7 +102,12 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Telas de login:</h6>
                         <a class="collapse-item" th:href="@{/login.html}">Login</a>
-                        <a class="collapse-item" th:href="@{/cadastro}">Cadastrar</a>
+                        <a class="collapse-item" th:href="@{/dinha/cadastro/pagina}">Cadastrar</a>
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Tabelas:</h6>
+                        <a class="collapse-item" th:href="@{/categorias/categoria/tabela}">Tabela categoria</a>
+                        <a class="collapse-item" th:href="@{/produtos/tables/tabela}">Tabela produtos</a>
 
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Outras Páginas:</h6>
