--- a/SistemaWeb/src/main/resources/templates/cadastro.html
+++ b/SistemaWeb/src/main/resources/templates/cadastro.html
@@ -18,7 +18,7 @@
     <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
     <link th:href="@{/css/sb-admin-2.css}" rel="stylesheet">
 
-    <link rel="shortcut icon" th:href="@{/iconetitulo/icon.ico}" type="image/x-icon">
+    <link rel="shortcut icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
 
 </head>
 
