--- a/SistemaWeb/src/main/resources/templates/tables.html
+++ b/SistemaWeb/src/main/resources/templates/tables.html
@@ -38,7 +38,7 @@
     <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
     <link th:href="@{/css/sb-admin-2.css}" rel="stylesheet">
 
-    <link rel="shortcut icon" th:href="@{/iconetitulo/icon.ico}" type="image/x-icon">
+    <link rel="shortcut icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
 
 
     <!-- Custom styles for this page -->
@@ -205,7 +205,7 @@
                             <div class="card-body p-0">
                                 <!-- Linha aninhada no corpo do cartão -->
                                 <div class="row">
-                                    <div class="col-lg-5 d-none d-lg-block" th:style="'background-image: url(' + @{/img/produtos.jpeg} + '); background-size: cover;'"></div>
+                                    <div class="col-lg-5 d-none d-lg-block" th:style="'background-image: url(' + @{/img/table.jpeg} + '); background-size: cover;'"></div>
 
 
                                     <div class="col-lg-7">
@@ -261,7 +261,7 @@
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Tabela de Produtos:</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
