--- a/SistemaWeb/src/main/resources/templates/login.html
+++ b/SistemaWeb/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
     <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/sb-admin-2.css}">
 
-    <link rel="shortcut icon" th:href="@{/iconetitulo/icon.ico}" type="image/x-icon">
+    <link rel="shortcut icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
 </head>
 
 <body class="bg-gradient-primary">
