--- a/SistemaWeb/src/main/resources/templates/categoria.html
+++ b/SistemaWeb/src/main/resources/templates/categoria.html
@@ -110,9 +110,9 @@
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Telas de login:</h6>
+                        <h6 class="collapse-header">Tela de login:</h6>
                         <a class="collapse-item" th:href="@{/login.html}">Login</a>
-                        <a class="collapse-item" th:href="@{/dinha/cadastro/pagina}">Cadastrar</a>
+
 
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Tabelas:</h6>
