--- a/SistemaWeb/src/main/resources/templates/tables.html
+++ b/SistemaWeb/src/main/resources/templates/tables.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dinha Kids - Tabela </title>
+    <title>Dinha Kids - Produtos </title>
 
     <!-- Estilo do Formulário -->
 
@@ -62,7 +62,7 @@
             <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Dinha Kids <sup>Tabela</sup></div>
+                <div class="sidebar-brand-text mx-3">Dinha Kids <sup>Produtos</sup></div>
             </a>
 
             <!-- Divider -->
@@ -99,22 +99,22 @@
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Tela de login:</h6>
-                        <a class="collapse-item" th:href="@{/login.html}">Login</a>
+                        <!-- <h6 class="collapse-header">Tela de login:</h6>
+                         <a class="collapse-item" th:href="@{/login.html}">Login</a>-->
 
 
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Tabelas:</h6>
-                        <a class="collapse-item" th:href="@{/categorias/categoria/tabela}">Tabela categoria</a>
-                        <a class="collapse-item" th:href="@{/produtos/tables/tabela}">Tabela produtos</a>
+                         <div class="collapse-divider"></div>
+                         <h6 class="collapse-header">Tabelas:</h6>
+                         <a class="collapse-item" th:href="@{/categorias/categoria/tabela}">Tabela categoria</a>
+                         <a class="collapse-item" th:href="@{/produtos/tables/tabela}">Tabela produtos</a>
 
-                    </div>
-                </div>
-            </li>
+                     </div>
+                 </div>
+             </li>
 
 
 
-            <!-- Divider -->
+             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
             <!-- Sidebar Toggler (Sidebar) -->
